# torrentTUI

./: .dockerignore  .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  SECURITY.md  demo.tape
.cargo/: config.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
src/: app.rs  config.rs  main.rs  types.rs
src/engine/: mod.rs  session.rs  torrent.rs
src/ui/: detail.rs  dialogs.rs  help.rs  input.rs  layout.rs  mod.rs  progress.rs  table.rs  util.rs
