[package]
name = "torrenttui"
version = "0.4.0"
edition = "2021"
description = "A terminal BitTorrent client for magnet link downloads"

[dependencies]
# TUI
ratatui = { version = "0.30", features = ["all-widgets"] }
crossterm = { version = "0.28", features = ["event-stream"] }
tui-textarea = { version = "0.7", features = ["crossterm", "ratatui"] }

# BitTorrent engine
librqbit = { version = "8", default-features = false, features = ["rust-tls", "watch"] }

# Async runtime
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time"] }
futures = "0.3"

# Serialization and config
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Utilities
dirs = "5"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }
fs4 = "0.12"
notify-rust = "4"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
